# internal/controller/v1/router.go
@@ -7,6 +7,7 @@ import (
 	"github.com/gofiber/fiber/v3"
 	"github.com/gofiber/fiber/v3/middleware/session"
 	"github.com/potom_pridumaem/internal/controller/middleware"
+	entity "github.com/potom_pridumaem/internal/entity/users"
 	"github.com/potom_pridumaem/internal/usecase"
 	"go.uber.org/zap"
 )
@@ -40,5 +41,9 @@ func NewRoutes(
 	propertyGroup := apiV1Group.Group("/properties")
 	{
 		propertyGroup.Post("/property", r.createProperty)
+		propertyGroup.Get("/", middleware.AuthRequired(sess), r.getProperties)
+		propertyGroup.Get("/:id", middleware.AuthRequired(sess), r.getProperty)
+		propertyGroup.Put("/:id", middleware.AuthRequired(sess), middleware.RoleRequired(string(entity.RoleLandlord)), r.updateProperty)
+		propertyGroup.Delete("/:id", middleware.AuthRequired(sess), middleware.RoleRequired(string(entity.RoleLandlord)), r.deleteProperty)
 	}
 }
